--- a/src/main/resources/static/projectConfig.html
+++ b/src/main/resources/static/projectConfig.html
@@ -459,7 +459,7 @@
                 <br/>
                 <div style="margin:20px;width:98%" id="defaultEnvJqgridPanel">
                     <table class="table table-striped table-hover"
-                           style="table-layout:fixed;word-break:break-all; word-wrap:break-all;">
+                           style="table-layout:fixed;word-break:break-all; word-wrap:break-word;">
                         <thead class="keyValueThead">
                         </thead>
                         <tbody class="keyValueTbody">
@@ -468,7 +468,7 @@
                 </div>
                 <div style="margin:20px;width:98%" id="defineEnvJqgridPanel">
                     <table class="table table-striped table-hover"
-                           style="table-layout:fixed;word-break:break-all; word-wrap:break-all;">
+                           style="table-layout:fixed;word-break:break-all; word-wrap:break-word;">
                         <thead class="keyValueThead">
                         </thead>
                         <tbody class="keyValueTbody">
@@ -519,7 +519,7 @@
                     重要提示
                 </h4>
             </div>
-            <div class="modal-body" id="myModalBody" style="word-break:break-all; word-wrap:break-all;">
+            <div class="modal-body" id="myModalBody" style="word-break:break-all; word-wrap:break-word;">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
@@ -543,7 +543,7 @@
                     重要提示
                 </h4>
             </div>
-            <div class="modal-body" id="delModalBody" style="word-break:break-all; word-wrap:break-all;">
+            <div class="modal-body" id="delModalBody" style="word-break:break-all; word-wrap:break-word;">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
