--- a/src/main/resources/static/projectConfig.html
+++ b/src/main/resources/static/projectConfig.html
@@ -381,21 +381,21 @@
             <div class="panel-body">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <table class="table">
+                        <table class="table table-bordered">
                             <tr>
-                                <th>
+                                <th class="text-center">
                                     项目名称：
                                 </th>
                                 <td id="projectNameTd">
                                     <!--配置中心-->
                                 </td>
-                                <th>
+                                <th  class="text-center">
                                     项目经理：
                                 </th>
                                 <td id="projectManagerTd">
                                     <!--张三-->
                                 </td>
-                                <th>
+                                <th  class="text-center">
                                     创建时间：
                                 </th>
                                 <td id="createDateTimeTd">
@@ -403,7 +403,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th>
+                                <th  class="text-center">
                                     组内成员：
                                 </th>
                                 <td colspan="5" id="projectMembersTd">
@@ -411,7 +411,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th>
+                                <th  class="text-center">
                                     项目描述：
                                 </th>
                                 <td colspan="5" id="projectDescribeTd">
