--- a/src/main/resources/static/projectConfig.html
+++ b/src/main/resources/static/projectConfig.html
@@ -341,6 +341,9 @@
                 });
             });
 
+            $("#historyBtn").click(function () {
+                window.location = "projectConfigRecord.html?projectId=" + projectId;
+            });
 
         });
     </script>
@@ -389,13 +392,13 @@
                                 <td id="projectNameTd">
                                     <!--配置中心-->
                                 </td>
-                                <th  class="text-center">
+                                <th class="text-center">
                                     项目经理：
                                 </th>
                                 <td id="projectManagerTd">
                                     <!--张三-->
                                 </td>
-                                <th  class="text-center">
+                                <th class="text-center">
                                     创建时间：
                                 </th>
                                 <td id="createDateTimeTd">
@@ -403,7 +406,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th  class="text-center">
+                                <th class="text-center">
                                     组内成员：
                                 </th>
                                 <td colspan="5" id="projectMembersTd">
@@ -411,7 +414,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th  class="text-center">
+                                <th class="text-center">
                                     项目描述：
                                 </th>
                                 <td colspan="5" id="projectDescribeTd">
