--- a/src/main/resources/static/projectConfig.html
+++ b/src/main/resources/static/projectConfig.html
@@ -345,6 +345,10 @@
                 window.location = "projectConfigRecord.html?projectId=" + projectId;
             });
 
+            $(".glyphicon-circle-arrow-right").click(function () {
+                window.location = "projectConfigRecord.html?projectId=" + projectId;
+            });
+
         });
     </script>
 </head>
@@ -377,7 +381,9 @@
         <div class="panel panel-primary" id="userManagerPanel">
             <div class="panel-heading">
                 <h3 class="panel-title">配置管理
-                    <div style="display:inline;float:right"><a href="index.html"><span
+                    <div style="display:inline;float:right"><a href="javascript:void(0);"><span
+                            class="glyphicon glyphicon-circle-arrow-right"
+                            style="color: white"></span></a>&nbsp;&nbsp;<a href="index.html"><span
                             class="glyphicon glyphicon-home" style="color: rgb(212, 106, 64);"></span></a></div>
                 </h3>
             </div>
