--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -134,7 +134,7 @@
                 </div>
                 <br/>
                 <div class="text-right">
-                    <button type="button" id="addMachineBtn" class="btn btn-info">新增HTTP接口</button>
+                    <button type="button" id="addHttpInterfaceBtn" class="btn btn-info">新增HTTP接口</button>
                 </div>
                 <br/>
                 <table class="table table-bordered">
@@ -153,9 +153,46 @@
                         <td class="text-center">GET</td>
                         <td class="text-center">/user/findUser</td>
                         <td class="text-center">
-                            <button class="btn btn-xs btn-success">编辑</button>&nbsp;&nbsp;
-                            <button class="btn btn-xs btn-danger">删除</button>&nbsp;&nbsp;
-                            <button class="btn btn-xs btn-info">预览</button>
+                            <button class="btn btn-xs btn-success">编辑</button>
+                            &nbsp;&nbsp;
+                            <button class="btn btn-xs btn-danger">删除</button>
+                            &nbsp;&nbsp;
+                            <button class="btn btn-xs btn-warning">预览</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <br/>
+                <div class="text-right">
+                    <button type="button" id="addRpcInterfaceBtn" class="btn btn-info">新增RPC接口</button>
+                </div>
+                <br/>
+                <table class="table table-bordered">
+                    <th class="text-center">接口ID</th>
+                    <th class="text-center">接口名称</th>
+                    <th class="text-center">接口类名</th>
+                    <th class="text-center">方法名称</th>
+                    <th class="text-center">操作</th>
+                    <tbody>
+                    <tr>
+                        <td class="text-center">
+                            20170711100808001
+                        </td>
+                        <td class="text-center">
+                            查询用户接口
+                        </td>
+                        <td class="text-center">
+                            com.bozhong.test.service.UserService
+                        </td>
+                        <td class="text-center">
+                            findUserById
+                        </td>
+                        <td class="text-center">
+                            <button class="btn btn-xs btn-success">编辑</button>
+                            &nbsp;&nbsp;
+                            <button class="btn btn-xs btn-danger">删除</button>
+                            &nbsp;&nbsp;
+                            <button class="btn btn-xs btn-warning">预览</button>
                         </td>
                     </tr>
                     </tbody>
