--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -134,7 +134,7 @@
                 </div>
                 <br/>
                 <div class="text-right">
-                    <button type="button" id="addHttpInterfaceBtn" class="btn btn-info" data-toggle="modal" data-target="#myModal">新增HTTP接口</button>
+                    <button type="button" id="addHttpInterfaceBtn" class="btn btn-info" data-toggle="modal" data-target="#myHttpModal">新增HTTP接口</button>
                 </div>
                 <br/>
                 <table class="table table-bordered">
@@ -164,7 +164,7 @@
                 </table>
                 <br/>
                 <div class="text-right">
-                    <button type="button" id="addRpcInterfaceBtn" class="btn btn-info" data-toggle="modal" data-target="#myModal">新增 RPC 接口</button>
+                    <button type="button" id="addRpcInterfaceBtn" class="btn btn-info" data-toggle="modal" data-target="#myRpcModal">新增 RPC 接口</button>
                 </div>
                 <br/>
                 <table class="table table-bordered">
@@ -229,15 +229,41 @@
 </footer>
 
 <!-- 模态框（Modal） -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="myHttpModal" tabindex="-1" role="dialog" aria-labelledby="myHttpModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     &times;
                 </button>
-                <h4 class="modal-title" id="myModalLabel">
-                    模态框（Modal）标题
+                <h4 class="modal-title" id="myHttpModalLabel">
+                    新增HTTP接口
+                </h4>
+            </div>
+            <div class="modal-body">
+                在这里添加一些文本
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+                <button type="button" class="btn btn-primary">
+                    提交更改
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="myRpcModal" tabindex="-1" role="dialog" aria-labelledby="myRpcModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="myRpcModalLabel">
+                    新增RPC接口
                 </h4>
             </div>
             <div class="modal-body">
