--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -134,7 +134,9 @@
                 </div>
                 <br/>
                 <div class="text-right">
-                    <button type="button" id="addHttpInterfaceBtn" class="btn btn-info" data-toggle="modal" data-target="#myHttpModal">新增HTTP接口</button>
+                    <button type="button" id="addHttpInterfaceBtn" class="btn btn-info" data-toggle="modal"
+                            data-target="#myHttpModal">新增HTTP接口
+                    </button>
                 </div>
                 <br/>
                 <table class="table table-bordered">
@@ -164,7 +166,9 @@
                 </table>
                 <br/>
                 <div class="text-right">
-                    <button type="button" id="addRpcInterfaceBtn" class="btn btn-info" data-toggle="modal" data-target="#myRpcModal">新增 RPC 接口</button>
+                    <button type="button" id="addRpcInterfaceBtn" class="btn btn-info" data-toggle="modal"
+                            data-target="#myRpcModal">新增 RPC 接口
+                    </button>
                 </div>
                 <br/>
                 <table class="table table-bordered">
@@ -229,8 +233,9 @@
 </footer>
 
 <!-- 模态框（Modal） -->
-<div class="modal fade" id="myHttpModal" tabindex="-1" role="dialog" aria-labelledby="myHttpModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal fade" id="myHttpModal" tabindex="-1" role="dialog" aria-labelledby="myHttpModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" style="width: 1024px">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
@@ -241,7 +246,58 @@
                 </h4>
             </div>
             <div class="modal-body">
-                在这里添加一些文本
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <h5>接口详情</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-2">
+                        <div class="form-group">
+                            <select class="form-control">
+                                <option value="HTTP">HTTP</option>
+                                <option value="HTTPS">HTTPS</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="form-group">
+                            <select class="form-control">
+                                <option value="GET">GET</option>
+                                <option value="POST">POST</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="form-group">
+                            <select class="form-control">
+                                <option value="JSON">JSON</option>
+                                <option value="XML">XML</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <input type="text" class="form-control" value="" placeholder="接口地址"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control" value="" placeholder="接口名称"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <textarea class="form-control" placeholder="请在此处介绍自己..." rows="3"></textarea>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
@@ -255,7 +311,8 @@
 </div>
 
 <!-- 模态框（Modal） -->
-<div class="modal fade" id="myRpcModal" tabindex="-1" role="dialog" aria-labelledby="myRpcModalLabel" aria-hidden="true">
+<div class="modal fade" id="myRpcModal" tabindex="-1" role="dialog" aria-labelledby="myRpcModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
