--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -350,7 +350,7 @@
                                 <tfoot>
                                 <tr>
                                     <th colspan="7">
-                                        <a href="javascript:;" class="addAddParam" onclick="addAddParam();"><span
+                                        <a href="javascript:;" id="addAddParam"><span
                                                 class="glyphicon glyphicon-plus-sign"></span> 添加属性</a>
                                         <a href="javascript:;" id="parup"
                                            class="btn btn-sm btn-default glyphicon glyphicon-arrow-up">上移</a>
@@ -363,6 +363,45 @@
                         </div>
                     </div>
                 </div>
+                <br/>
+                <br/>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <ul id="myTab" class="nav nav-tabs">
+                            <li class="active">
+                                <a href="#returnExample" data-toggle="tab">
+                                    返回示例
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#exceptionExample" data-toggle="tab">
+                                    异常示例
+                                </a>
+                            </li>
+                        </ul>
+                        <div id="myTabContent" class="tab-content">
+                            <div class="tab-pane fade in active" id="returnExample">
+                                <br/>
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="暂无返回示例"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="注意事项"></textarea>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="exceptionExample">
+                                <br/>
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="暂无异常示例"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="注意事项"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
