api接口文档管理系统设计文档

--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -350,7 +350,7 @@
                                 <tfoot>
                                 <tr>
                                     <th colspan="7">
-                                        <a href="javascript:;" id="addAddParam"><span
+                                        <a href="javascript:;" id="httpAddRequestParam"><span
                                                 class="glyphicon glyphicon-plus-sign"></span> 添加属性</a>
                                         <a href="javascript:;" id="parup"
                                            class="btn btn-sm btn-default glyphicon glyphicon-arrow-up">上移</a>
