api接口文档管理系统设计文档

--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -93,7 +93,7 @@
                 $(this).addClass("bg-success");
             });
 
-            //
+            //删除行事件
             $("#myHttpModal").delegate(".glyphicon-trash", "click", function () {
                 $(this).parent().parent().parent().remove();
             });
